--- a/styles/styles.css
+++ b/styles/styles.css
@@ -251,9 +251,14 @@ nav ul li.home a{
 .social select{
 	background: transparent;
 	border: none;
-	width: 150px;
+	width: 134px;
 	height: 25px;
 	color: #4c4c4c;
+	-webkit-appearance: none;
+	-moz-appearance: none;
+	text-overflow: '';
+	-ms-appearance: none;
+	appearance: none!important;
 }
 .social .select:hover{
 	box-shadow: 0 0 8px rgba(250, 88, 42, .7);
@@ -270,7 +275,7 @@ nav ul li.home a{
 	width: 133px;
 	height: 25px;
 	overflow: hidden;
-	background: url("../i/i/icon.png") no-repeat 118px 10px #fff;
+	background: url("../i/icon.png") no-repeat 118px 10px #fff;
 	margin-right: 14px;
 	border-radius: 3px;
 }
