--- a/styles/styles.css
+++ b/styles/styles.css
@@ -11,6 +11,11 @@ html, body{
 	font-family: Dosis Book;
 	letter-spacing: 0.03em;
 }
+.clearfix:after{
+	content: "";
+	display: table;
+	clear: both;
+}
 .wrapper{
 	overflow: hidden;
 	height: 1000px;
@@ -53,7 +58,7 @@ header .basket a{
 	display: block;
 	width: 33px;
 	height: 33px;
-	background: url("../i/bg-basket.png");
+	background: url("../i/sprite1.png") -10px -9px no-repeat;
 	-webkit-box-shadow: inset 0 1px 1px 0px rgba(0, 0, 0, .39);
 	box-shadow: inset 0 1px 1px 0px rgba(0, 0, 0, .39);
 	border-radius: 4px;
@@ -64,17 +69,17 @@ header .basket a span{
 	background: -webkit-linear-gradient(#f54a1b, #ed2d07);
 	background: -o-linear-gradient(#f54a1b, #ed2d07);
 	background: linear-gradient(#f54a1b, #ed2d07);
-    border-radius: 15px;
-    height: 18px;
-    position: absolute;
-    right: -7px;
-    text-indent: 7px;
-    top: -7px;
-    width: 18px;
-    font-size: 0.7875em;
-    line-height: 20px;
-    border: 1px solid #c6371d;
-    box-shadow: 0px 1px 1px 0px rgba(255, 158, 119, 0.54) inset;
+	border-radius: 15px;
+	height: 18px;
+	position: absolute;
+	right: -7px;
+	text-indent: 7px;
+	top: -7px;
+	width: 18px;
+	font-size: 0.7875em;
+	line-height: 20px;
+	border: 1px solid #c6371d;
+	box-shadow: 0px 1px 1px 0px rgba(255, 158, 119, 0.54) inset;
 }
 header ul li{
 	display: inline-block;
@@ -94,108 +99,108 @@ header li a:hover{
 /*nav*/
 .dropup,
 .dropdown {
-    position: relative;
+	position: relative;
 }
 .dropdown-menu {
-    background-clip: padding-box;
-    background-color: #fbf2d3;
-    box-shadow: 0 14px 16px rgba(0, 0, 0, 0.118);
-    display: none;
-    float: left;
-    font-size: 14px;
-    left: 0;
-    list-style: outside none none;
-    min-width: 100%;
-    padding: 5px 0;
-    position: absolute;
-    text-align: left;
-    top: 100%;
-    z-index: 1000;
+	background-clip: padding-box;
+	background-color: #fbf2d3;
+	box-shadow: 0 14px 16px rgba(0, 0, 0, 0.118);
+	display: none;
+	float: left;
+	font-size: 14px;
+	left: 0;
+	list-style: outside none none;
+	min-width: 100%;
+	padding: 5px 0;
+	position: absolute;
+	text-align: left;
+	top: 100%;
+	z-index: 1000;
 }
 .dropdown-menu > li > a {
-    display: block;
-    margin: 9px;
-    clear: both;
-    font-weight: normal;
-    line-height: 1.42857143;
-    color: #333;
-    white-space: nowrap;
-    background-clip: content-box;
-    text-indent: 14px;
-    border-radius: 7px;
+	display: block;
+	margin: 9px;
+	clear: both;
+	font-weight: normal;
+	line-height: 1.42857143;
+	color: #333;
+	white-space: nowrap;
+	background-clip: content-box;
+	text-indent: 14px;
+	border-radius: 7px;
 }
 .dropdown-menu > li > a:hover,
 .dropdown-menu > li > a:focus {
-    color: #fff;
-    text-decoration: none;
-    background-color: #f54922;
+	color: #fff;
+	text-decoration: none;
+	background-color: #f54922;
 }
 .dropdown-menu > .active > a,
 .dropdown-menu > .active > a:hover,
 .dropdown-menu > .active > a:focus {
-    color: #fff;
-    text-decoration: none;
-    background-color: #337ab7;
-    outline: 0;
+	color: #fff;
+	text-decoration: none;
+	background-color: #337ab7;
+	outline: 0;
 }
 .dropdown-menu > .disabled > a,
 .dropdown-menu > .disabled > a:hover,
 .dropdown-menu > .disabled > a:focus {
-    color: #777;
+	color: #777;
 }
 .dropdown-menu > .disabled > a:hover,
 .dropdown-menu > .disabled > a:focus {
-    text-decoration: none;
-    cursor: not-allowed;
-    background-color: transparent;
-    background-image: none;
-    filter: progid: DXImageTransform.Microsoft.gradient(enabled false);
+	text-decoration: none;
+	cursor: not-allowed;
+	background-color: transparent;
+	background-image: none;
+	filter: progid: DXImageTransform.Microsoft.gradient(enabled false);
 }
 .open > .dropdown-menu {
-    display: block;
+	display: block;
 }
 .open > a {
-    outline: 0;
+	outline: 0;
 }
 .dropdown-menu-right {
-    right: 0;
-    left: auto;
+	right: 0;
+	left: auto;
 }
 .dropdown-menu-left {
-    right: auto;
-    left: 0;
+	right: auto;
+	left: 0;
 }
 .dropdown-header {
-    display: block;
-    padding: 3px 20px;
-    font-size: 12px;
-    line-height: 1.42857143;
-    color: #777;
-    white-space: nowrap;
+	display: block;
+	padding: 3px 20px;
+	font-size: 12px;
+	line-height: 1.42857143;
+	color: #777;
+	white-space: nowrap;
 }
 .dropdown-backdrop {
-    position: fixed;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
-    z-index: 990;
+	position: fixed;
+	top: 0;
+	right: 0;
+	bottom: 0;
+	left: 0;
+	z-index: 990;
 }
 .pull-right > .dropdown-menu {
-    right: 0;
-    left: auto;
+	right: 0;
+	left: auto;
 }
 .dropup .caret,
 .navbar-fixed-bottom .dropdown .caret {
-    content: "";
-    border-top: 0;
-    border-bottom: 4px solid;
+	content: "";
+	border-top: 0;
+	border-bottom: 4px solid;
 }
 .dropup .dropdown-menu,
 .navbar-fixed-bottom .dropdown .dropdown-menu {
-    top: auto;
-    bottom: 100%;
-    margin-bottom: 2px;
+	top: auto;
+	bottom: 100%;
+	margin-bottom: 2px;
 }
 nav{
 	background: url("../i/bg-menu.png") repeat-x #fbf2d3;
@@ -208,8 +213,8 @@ nav ul .drop{
 }
 nav li .drop-link{
 	color: #857a5b;
-    display: block;
-    padding: 22px 14px 22px 18px;
+	display: block;
+	padding: 22px 14px 22px 18px;
 }
 nav li .dropdown:hover{
 	background: -webkit-linear-gradient(#f0e4b8 0%, #fbf2d3 50%, #fbf2d3 100%);
@@ -225,7 +230,7 @@ nav ul li.home{
 nav ul li.home a{
 	width: 16px;
 	height: 16px;
-	background: url("../i/sprite.png") -79px -25px;
+	background: url("../i/sprite1.png") -88px -59px;
 	display: block;
 }
 /*social*/
@@ -250,15 +255,24 @@ nav ul li.home a{
 }
 .social select{
 	background: transparent;
-	border: none;
 	width: 134px;
 	height: 25px;
 	color: #4c4c4c;
+	display: inline-block;
+	width: 133px;
+	height: 25px;
+	background: url("../i/icon.png") no-repeat 118px 10px #fff;
+	margin-right: 14px;
+	border-radius: 3px;
+	cursor: pointer;
 	-webkit-appearance: none;
 	-moz-appearance: none;
 	text-overflow: '';
 	-ms-appearance: none;
 	appearance: none!important;
+}
+select::-ms-expand {
+	display: none;
 }
 .social .select:hover{
 	box-shadow: 0 0 8px rgba(250, 88, 42, .7);
@@ -269,15 +283,6 @@ nav ul li.home a{
 	border-left: 1px solid #e0e0e0;
 	border-right: 1px solid transparent;
 	border-bottom: 1px solid transparent;
-}
-.social .select{
-	display: inline-block;
-	width: 133px;
-	height: 25px;
-	overflow: hidden;
-	background: url("../i/icon.png") no-repeat 118px 10px #fff;
-	margin-right: 14px;
-	border-radius: 3px;
 }
 .social input[type="text"]{
 	vertical-align: top;
@@ -291,15 +296,45 @@ nav ul li.home a{
 .social input[type="text"]:focus{
 	box-shadow: 0 0 8px rgba(250, 88, 42, .7);
 }
+.social select:focus{
+	box-shadow: 0 0 8px rgba(250, 88, 42, .7);
+}
 .social input[type="button"]{
-	background: url("../i/sprite.png") repeat scroll -59px -42px transparent;
-    border: medium none;
-    cursor: pointer;
-    height: 25px;
-    position: absolute;
-    right: 0;
-    top: 0;
-    width: 24px;
+	background: url("../i/sprite1.png") repeat scroll -100px -96px transparent;
+	border: medium none;
+	cursor: pointer;
+	height: 25px;
+	position: absolute;
+	right: 0;
+	top: 0;
+	width: 24px;
+}
+.social-icons{
+	float: right;
+	padding: 10px 10px 0 0;
+}
+.social-icons li{
+	display: inline-block;
+	vertical-align: top;
+}
+.social-icons a{
+	display: block;
+	width: 14px;
+	height: 10px;
+	background: transparent url("../i/sprite1.png") no-repeat;
+	margin-right: 6px;
+}
+.social-icons li:nth-child(1) a{
+	background-position: -166px -124px;
+}
+.social-icons li:nth-child(2) a{
+	background-position: -63px -59px;
+}
+.social-icons li:nth-child(3) a{
+	background-position: -10px -67px;
+}
+.social-icons li:nth-child(4) a{
+	background-position: -10px -135px;
 }
 /*slider*/
 .slider{
@@ -347,63 +382,63 @@ nav ul li.home a{
 	border-bottom: 6px solid #8ccac8;
 }
 #slider {
-    min-height: 420px;
-    position: relative;
+	min-height: 420px;
+	position: relative;
 }
 .slide {
-    width: 100%;
-    height: 100%;
+	width: 100%;
+	height: 100%;
 }
 .sli-links {
-    bottom: 20px;
-    left: 25px;
-    margin-top: 10px;
-    position: absolute;
-    text-align: center;
+	bottom: 20px;
+	left: 25px;
+	margin-top: 10px;
+	position: absolute;
+	text-align: center;
 }
 .sli-links .control-slide {
-    margin: 2px;
-    display: inline-block;
-    width: 8px;
-    height: 8px;
-    overflow: hidden;
-    text-indent: -9999px;
-    border-radius: 10px;
-    background: transparent;
-    border: 2px solid #fff;
+	margin: 2px;
+	display: inline-block;
+	width: 8px;
+	height: 8px;
+	overflow: hidden;
+	text-indent: -9999px;
+	border-radius: 10px;
+	background: transparent;
+	border: 2px solid #fff;
 }
 .sli-links .control-slide:hover {
-    cursor: pointer;
-    background-position: center center;
+	cursor: pointer;
+	background-position: center center;
 }
 .sli-links .control-slide.active {
-    background-position: center top;
-    background-color: #fff;
+	background-position: center top;
+	background-color: #fff;
 }
 #prewbutton,
 #nextbutton {
-    display: block;
-    width: 15px;
-    height: 100%;
-    position: absolute;
-    top: 0;
-    overflow: hidden;
-    text-indent: -999px;
-    background: url(arrowBg.png) left center no-repeat;
-    opacity: 0.8;
-    z-index: 3;
-    outline: none !important;
+	display: block;
+	width: 15px;
+	height: 100%;
+	position: absolute;
+	top: 0;
+	overflow: hidden;
+	text-indent: -999px;
+	background: url(arrowBg.png) left center no-repeat;
+	opacity: 0.8;
+	z-index: 3;
+	outline: none !important;
 }
 #prewbutton {
-    left: 10px;
+	left: 10px;
 }
 #nextbutton {
-    right: 10px;
-    background: url(arrowBg.png) right center no-repeat;
+	right: 10px;
+	background: url(arrowBg.png) right center no-repeat;
 }
 #prewbutton:hover,
 #nextbutton:hover {
-    opacity: 1;
+	opacity: 1;
 }
 /*featured-products*/
 h4{
@@ -413,7 +448,7 @@ h4{
 	background: url("../i/bg-title.jpg") right no-repeat;
 }
 .brands-slider h4 {
-    background-position: 84px 5px;
+	background-position: 84px 5px;
 }
 .featured .product{
 	display: inline-block;
